修改product的几个页面的产品，分离代码，去掉重复的代码的，6边型修改为纯背景加文本模式

--- a/productEnterprise.html
+++ b/productEnterprise.html
@@ -9,25 +9,12 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/product.css">
-  <link rel="stylesheet" href="css/productAreas.css">
+  <link rel="stylesheet" href="css/productEnterprise.css">
 </head>
 <body>
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
 scrolling="no" src="productBottomHeader.html" frameborder=0 current="productEnterprise"></iframe>
-  
-  <!-- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#">运营商</a></li>
-        <li><a href="#">企业版</a></li>
-        <li><a href="#">小区版</a></li>
-        <li><a href="#">网吧版</a></li>
-        <li><a href="#">SMB版</a></li>
-      </ul>
-    </div>
-  </nav> -->
-  <!-- main -->
   <div class="main">
     <section class="outer-section">
       <div class="content1">
@@ -38,23 +25,40 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productEnte
       </div>
        <!-- 中间图片 -->
       <div class="product-img">
-        <img src="img/product-areas.png" alt="">
+        <img src="img/product-Enterprise.png" alt="">
       </div>
-      <div class="content2">
+      <div class="content2 content-block-group">
         <div>
           <h2 class="product-title">不仅仅只是快，更重要的是稳、准、狠</h2>
-          <ul class="row">
-            <li class="col-md-4"><img src="img/product-areas-block1.png" alt=""></li>
-            <li class="col-md-4"><img src="img/product-areas-block2.png" alt=""></li>
-            <li class="col-md-4"><img src="img/product-areas-block3.png" alt=""></li>
+          <ul class="row block">
+            <li class="col-md-4">
+              <div>
+                <h2>6<span>千兆</span></h2>
+                <p>电口光口</p>
+              </div>
+            </li>
+            <li class="col-md-4">
+              <div>
+                <p>高达</p>
+                <h2>4<span>Gbps</span></h2>
+                <p>吞吐</p>
+              </div>
+            </li>
+            <li class="col-md-4">
+              <div>
+                <p>高达</p>
+                <h2>3<span>万</span></h2>
+                <p>并发用户</p>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
     </section>
     <section class="outer-section">
       <div class="content3">
-        <h1 class="product-other-title">小区首选，宽带一体化运营</h1>
-        <p>Panabit小区版专门为小区宽带运营商量身定制的、以软件租赁模式为主的高性能、高可用性、功能丰富的网络出口一体优化解决方案。可适用于同时在线 80-8000人以下的小区宽带网络。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡、PPPoE、Radius 对接、共享检测、防封杀等丰富功能。</p>
+        <h1 class="product-other-title">企业必备，上网行为管理的神器</h1>
+        <p>Panabit企业版专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。特别适用于同时在线1500用户以内的普教、企业、政府、酒店、WIFI覆盖场馆等客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功。</p>
       </div>
     </section>
     <section class="outer-section">
@@ -99,10 +103,6 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productEnte
           <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
         </ul>
       </div>
-    </section>
-    <section class="outer-section bottom-promote">
-      <h1>免费体验派网产品</h1>
-      <button>现在注册</button>
     </section>
   </div>
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
