--- a/productAreas.html
+++ b/productAreas.html
@@ -15,19 +15,6 @@
   <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
 scrolling="no" src="productBottomHeader.html" frameborder=0 current="productAreas"></iframe>
-  <!-- <iframe src="" frameborder="0"></iframe> -->
-  <!-- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#">运营商</a></li>
-        <li><a href="#">企业版</a></li>
-        <li><a href="#">小区版</a></li>
-        <li><a href="#">网吧版</a></li>
-        <li><a href="#">SMB版</a></li>
-      </ul>
-    </div>
-  </nav> -->
-  <!-- main -->
   <div class="main">
     <section class="outer-section">
       <div class="content1">
@@ -40,13 +27,30 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productArea
       <div class="product-img">
         <img src="img/product-areas.png" alt="">
       </div>
-      <div class="content2">
+      <div class="content2 content-block-group">
         <div>
           <h2 class="product-title">不仅仅只是快，更重要的是稳、准、狠</h2>
-          <ul class="row">
-            <li class="col-md-4"><img src="img/product-areas-block1.png" alt=""></li>
-            <li class="col-md-4"><img src="img/product-areas-block2.png" alt=""></li>
-            <li class="col-md-4"><img src="img/product-areas-block3.png" alt=""></li>
+          <ul class="row block">
+            <li class="col-md-4">
+              <div>
+                <h2>6<span>千兆</span></h2>
+                <p>电口光口</p>
+              </div>
+            </li>
+            <li class="col-md-4">
+              <div>
+                <p>高达</p>
+                <h2>4<span>Gbps</span></h2>
+                <p>吞吐</p>
+              </div>
+            </li>
+            <li class="col-md-4">
+              <div>
+                <p>高达</p>
+                <h2>3<span>万</span></h2>
+                <p>并发用户</p>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
@@ -99,10 +103,6 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productArea
           <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
         </ul>
       </div>
-    </section>
-    <section class="outer-section bottom-promote">
-      <h1>免费体验派网产品</h1>
-      <button>现在注册</button>
     </section>
   </div>
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
