--- a/productSmb.html
+++ b/productSmb.html
@@ -17,18 +17,6 @@
   <!-- bottom-nav -->
   <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
 scrolling="no" src="productBottomHeader.html" frameborder=0 current="productSmb"></iframe>
-  <!-- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#">运营商</a></li>
-        <li><a href="#">企业版</a></li>
-        <li><a href="#">小区版</a></li>
-        <li><a href="#">网吧版</a></li>
-        <li><a href="#">SMB版</a></li>
-      </ul>
-    </div>
-  </nav> -->
-  <!-- main -->
   <div class="main">
     <section class="outer-section">
       <div class="content1">
@@ -39,7 +27,7 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productSmb"
       </div>
        <!-- 中间图片 -->
       <div class="product-img">
-        <img src="img/product-areas.png" alt="">
+        <img src="img/product-smb.png" alt="">
       </div>
       <div class="content2">
         <div style="width: 1000px; margin: 0 auto 80px; ">
@@ -64,12 +52,12 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productSmb"
         </div>
         <div class="row bottom">
           <div class="row col-sm-6 buy-bottom">
-            <div class="col-md-6">购买</div>
-            <div class="col-md-6">说明</div>
+            <div class="col-md-6"><span class="glyphicon glyphicon-shopping-cart"></span>购买</div>
+            <div class="col-md-6"><span class="glyphicon glyphicon-book"></span>说明</div>
           </div>
           <div class="row col-sm-6 buy-bottom">
-            <div class="col-md-6">购买</div>
-            <div class="col-md-6">说明</div>
+            <div class="col-md-6"><span class="glyphicon glyphicon-shopping-cart"></span>购买</div>
+            <div class="col-md-6"><span class="glyphicon glyphicon-book"></span>说明</div>
           </div>
         </div>
       </div>
