--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <a href="#" class="btn btn-pink" data-toggle="modal" data-target="#myModal-1">申请加盟</a>
           </div>
           <ul class="nav navbar-nav navbar-right header-top">
-            <li><a href="#">产品与解决方案</a></li>
-            <li><a href="#">渠道合作</a></li>
+            <li><a href="solution.html">产品与解决方案</a></li>
+            <li><a href="productIsp.html">渠道合作</a></li>
             <li><a href="aboutIndex.html">关于我们</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
