修改头部跟脚步引入方式

--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/panabit.css">
   <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 </head>
 <body>
@@ -88,6 +87,7 @@
         </div>
     </div>
   </div>
+  <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/common.js"></script>
   <script>
     let footerLink = document.querySelector('#footerLink');
