--- a/aboutClient.html
+++ b/aboutClient.html
@@ -5,20 +5,16 @@
 	<title>aboutClient</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/aboutClient.css">
 </head>
 <body>
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
-  
+  <div id="header"></div>
   <!-- bottom-nav -->
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="headerBottom.html" frameborder=0 current="aboutClient"></iframe> 
-  <!-- main -->
+  <div id="header-bottom"></div>
   <div class="main">
-    <section class="outer-section content1 content1_banner">
+    <section class="outer-se  
+    ction content1 content1_banner">
        荣誉客户 
     </section>
     <section class="outer-section content2">
@@ -77,5 +73,6 @@ scrolling="no" src="headerBottom.html" frameborder=0 current="aboutClient"></ifr
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+  <script src="js/common.js"></script>
 </body>
 </html>
