--- a/solution.html
+++ b/solution.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <!-- header -->
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
+  <div id="header"></div>
+  <!-- <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> -->
   <!-- main -->
   <div class="main">
     <section class="outer-section">
@@ -151,5 +152,6 @@
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+  <script src="js/header.js"></script>
 </body>
 </html>
