--- a/aboutContact.html
+++ b/aboutContact.html
@@ -13,9 +13,9 @@
 </head>
 <body>
   <!-- header -->
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="headerBottom.html" frameborder=0 current="aboutContact"></iframe> 
+  <div id="header"></div>
+  <!-- bottom-nav -->
+  <div id="header-bottom"></div>
   <!-- main -->
   <div class="main">
     <section class="outer-section content1" id="container">
@@ -91,10 +91,11 @@ scrolling="no" src="headerBottom.html" frameborder=0 current="aboutContact"></if
       </div>
     </section>
   </div>
-  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
+  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe>
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=055423e24a8756b527927b781bb95b57"></script>
+  <script src="js/common.js"></script>
   <script type="text/javascript">
     var map = new AMap.Map('container',{
         resizeEnable: true,
