--- a/aboutIndex.html
+++ b/aboutIndex.html
@@ -11,9 +11,10 @@
   <link rel="stylesheet" href="css/aboutIndex.css">
 </head>
 <body>
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="headerBottom.html" frameborder=0 current="aboutIndex"></iframe> 
+  <!-- header -->
+  <div id="header"></div>
+  <!-- bottom-nav -->
+  <div id="header-bottom"></div>
   <!-- main -->
   <div class="main">
     <section class="outer-section content1 content1_banner">
@@ -52,5 +53,6 @@ scrolling="no" src="headerBottom.html" frameborder=0 current="aboutIndex"></ifra
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+  <script src="js/common.js"></script>
 </body>
 </html>
