--- a/ixcache.html
+++ b/ixcache.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- header -->
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
+  <div id="header"></div>
   <!-- main -->
   <div class="main">
     <section class="outer-section">
@@ -145,5 +145,6 @@
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+  <script src="js/common.js"></script>
 </body>
 </html>
