--- a/productAreas.html
+++ b/productAreas.html
@@ -6,15 +6,13 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/product.css">
   <link rel="stylesheet" href="css/productAreas.css">
 </head>
 <body>
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="productBottomHeader.html" frameborder=0 current="productAreas"></iframe>
+  <div id="header"></div>
+  <div id="product-bottom-header"></div>
   <div class="main">
     <section class="outer-section">
       <div class="content1">
@@ -108,5 +106,6 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productArea
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+  <script src="js/common.js"></script>
 </body>
 </html>
