--- a/productNetcafe.html
+++ b/productNetcafe.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="css/productNetcafe.css">
 </head>
 <body>
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe>
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="productBottomHeader.html" frameborder=0 current="productNetcafe"></iframe>
+  <div id="header"></div>
+  <div id="product-bottom-header"></div>
   <div class="main">
     <section class="outer-section">
       <div class="content1">
@@ -109,5 +108,6 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productNetc
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/common.js"></script>
 </body>
 </html>
