--- a/productSmb.html
+++ b/productSmb.html
@@ -13,10 +13,8 @@
   <link rel="stylesheet" href="css/productSmb.css">
 </head>
 <body>
-  <iframe name="header" marginwidth=0 marginheight=0 width=100% height=100 src="header.html" frameborder=0></iframe> 
-  <!-- bottom-nav -->
-  <iframe name="bottom-header" marginwidth=0 marginheight=0 width=100% height=50 
-scrolling="no" src="productBottomHeader.html" frameborder=0 current="productSmb"></iframe>
+  <div id="header"></div>
+  <div id="product-bottom-header"></div>
   <div class="main">
     <section class="outer-section">
       <div class="content1">
@@ -149,5 +147,6 @@ scrolling="no" src="productBottomHeader.html" frameborder=0 current="productSmb"
   <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src='js/common.js'></script>
 </body>
 </html>
