--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-fixed-top navbar-default navbar-index" role="navigation">
+  <nav class="index-nav navbar navbar-fixed-top navbar-default navbar-index" role="navigation">
       <div class="container-fluid">
         <!-- logo -->
         <div class="navbar-header header-top">
@@ -30,6 +30,54 @@
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
+      <div class="bg-nav">
+        <div class="container">
+          <div class="menu-text-wrap J-mobile-first"">
+            <div class="menu-text-list clearfix">
+              <div class="menu-text-col">
+                <div class="menu-text-item">
+                  <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">产品与解决方案</h3>
+                  <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
+                    <ul class="text-item-col" role="presentation">
+                      <li><a href="solution.html">智能应用网关Panabit</a></li>
+                      <li><a href="ixcache.html">内存缓存加速iXCache</a></li>
+                      <li><a href="panalog.html">数据存留审计Panalog</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="menu-text-col">
+                <div class="menu-text-item">
+                  <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">渠道合作</h3>
+                  <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
+                    <ul class="text-item-col" role="presentation">
+                      <li><a href="productIsp.html">运营商</a></li>
+                      <li><a href="productEnterprise.html">企业版</a></li>
+                      <li><a href="productAreas.html">小区版</a></li>
+                      <li><a href="productNetcafe.html">网吧版</a></li>
+                      <li><a href="productSmb.html">SMB版</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="menu-text-col">
+                <div class="menu-text-item">
+                  <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">关于我们</h3>
+                  <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
+                    <ul class="text-item-col" role="presentation">
+                      <li><a href="aboutIndex.html">公司简介</a></li>
+                      <li><a href="aboutContact.html">联系我们</a></li>
+                      <li><a href="aboutJob.html">招贤纳才</a></li>
+                      <li><a href="aboutNews.html">最新动态</a></li>
+                      <li><a href="aboutClient.html">荣誉客户</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </nav>
   <!-- header -->
   <div class="content1 swiper-container">
