--- a/aboutContact.html
+++ b/aboutContact.html
@@ -19,8 +19,6 @@
   <!-- main -->
   <div class="main">
     <section class="outer-section content1" id="container">
-
-
     </section>
     <section class="outer-section content2">
       <div>
@@ -91,7 +89,7 @@
       </div>
     </section>
   </div>
-  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe>
+  <div id="footer"></div>
   <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=055423e24a8756b527927b781bb95b57"></script>
