--- a/index.html
+++ b/index.html
@@ -138,20 +138,11 @@
     </section>
   </div>
   <!-- footer -->
-  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
+  <div id="footer"></div>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/swiper-3.4.2.jquery.min.js"></script>
 <script>
-  $.ajax({
-    type: 'GET',
-    url: 'apply.html',
-    dataType: 'html',
-    async : false,
-    success: function (d){
-      $('body').append($(d));
-    }
-  });
   var mySwiper = new Swiper ('.swiper-container', {
     loop: true,
     autoplay : 5000,
@@ -161,10 +152,20 @@
     paginationClickable: true,
     preventLinksPropagation : true,
   })
+  $.ajax({
+    type: 'GET',
+    url: 'apply.html',
+    dataType: 'html',
+    async : false,
+    success: function (d){
+      $('body').append($(d));
+    }
+  });
   // 链接
   function linkHtml (link) {
     window.location.href=link
   }      
 </script>
+<script src="js/common.js"></script>
 </body>
 </html>
