--- a/panalog.html
+++ b/panalog.html
@@ -66,7 +66,7 @@
       </ul>
     </section>
   </div>
-  <iframe name="footer" marginwidth=0 marginheight=0 width=100% height=495 src="footer.html" frameborder=0></iframe> 
+  <div id="footer"></div>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/common.js"></script>
