--- a/header.html
+++ b/header.html
@@ -1,48 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>header</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
-</head>
-<body>
-  <div id="header-containers">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- logo -->
-        <div class="navbar-header header-top">
-          <a class="navbar-brand header-brand" href="index.html" target="_top"><img src="img/logo.png" alt=""></a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <div class="navbar-right">
-            <a href="#" class="btn btn-red" data-toggle="modal" data-target="#myModal">免费试用</a>
-            <a href="#" class="btn btn-border-red" data-toggle="modal" data-target="#myModal-1">申请加盟</a>
+<nav class="index-nav navbar navbar-fixed-top navbar-default navbar-index" role="navigation">
+  <div class="container-fluid">
+    <!-- logo -->
+    <div class="navbar-header header-top">
+      <a class="navbar-brand header-brand" href="index.html"><img src="img/logo1.png" alt=""></a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="navbar-right">
+        <a href="#" class="btn btn-pink" data-toggle="modal" data-target="#myModal">免费试用</a>
+        <a href="#" class="btn btn-pink" data-toggle="modal" data-target="#myModal-1">申请加盟</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right header-top">
+        <li><a href="solution.html">产品与解决方案</a></li>
+        <li><a href="productIsp.html">渠道合作</a></li>
+        <li><a href="aboutIndex.html">关于我们</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+  <div class="bg-nav">
+    <div class="container">
+      <div class="menu-text-wrap J-mobile-first" "="">
+        <div class="menu-text-list clearfix">
+          <div class="menu-text-col">
+            <div class="menu-text-item">
+              <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">产品与解决方案</h3>
+              <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
+                <ul class="text-item-col" role="presentation">
+                  <li><a href="solution.html">智能应用网关Panabit</a></li>
+                  <li><a href="ixcache.html">内存缓存加速iXCache</a></li>
+                  <li><a href="panalog.html">数据存留审计Panalog</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <ul class="nav navbar-nav navbar-right header-top">
-            <li><a href="solution.html" target="_top">产品与解决方案</a></li>
-            <li><a href="productIsp.html" target="_top">渠道合作</a></li>
-            <li><a href="aboutIndex.html" target="_top">关于我们</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+          <div class="menu-text-col">
+            <div class="menu-text-item">
+              <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">渠道合作</h3>
+              <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
+                <ul class="text-item-col" role="presentation">
+                  <li><a href="productIsp.html">运营商</a></li>
+                  <li><a href="productEnterprise.html">企业版</a></li>
+                  <li><a href="productAreas.html">小区版</a></li>
+                  <li><a href="productNetcafe.html">网吧版</a></li>
+                  <li><a href="productSmb.html">SMB版</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="menu-text-col">
+            <div class="menu-text-item">
+              <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">关于我们</h3>
+              <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
+                <ul class="text-item-col" role="presentation">
+                  <li><a href="aboutIndex.html">公司简介</a></li>
+                  <li><a href="aboutContact.html">联系我们</a></li>
+                  <li><a href="aboutJob.html">招贤纳才</a></li>
+                  <li><a href="aboutNews.html">最新动态</a></li>
+                  <li><a href="aboutClient.html">荣誉客户</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script>
-    $.ajax({
-      type: 'GET',
-      url: 'apply.html',
-      dataType: 'html',
-      async : false,
-      success: function (d){
-        $('body').append($(d));
-      }
-    });
-  </script>
-</body>
-</html>
+</nav>
+<script>
+  $.ajax({
+    type: 'GET',
+    url: 'apply.html',
+    dataType: 'html',
+    async : false,
+    success: function (d){
+      $('body').append($(d));
+    }
+  });
+</script>
