--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div><!-- /.container-fluid -->
       <div class="bg-nav">
         <div class="container">
-          <div class="menu-text-wrap J-mobile-first"">
+          <div class="menu-text-wrap J-mobile-first">
             <div class="menu-text-list clearfix">
               <div class="menu-text-col">
                 <div class="menu-text-item">
