--- a/productBottomHeader.html
+++ b/productBottomHeader.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/panabit.css">
   <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
   <style>
-    .navbar-default .navbar-nav>li>a.current, .navbar-default .navbar-nav>li>a.current:focus, .navbar-default .navbar-nav>li>a.current:hover {
+    .subnav .navbar-nav>li>a.current, .subnav .navbar-nav>li>a.current:focus, .subnav .navbar-nav>li>a.current:hover {
       color: #ea042b;
     }
     nav:nth-child{
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="subnav navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav navbar-left">
         <li><a href="productIsp.html"  target="_top">运营商</a></li>
