--- a/footer.html
+++ b/footer.html
@@ -25,8 +25,8 @@
           <div class="widget">
             <h4 class="title">探索Panabit</h4>
             <ul>
-              <li><a href="" target="_top">为何选择派网</a></li>
-              <li><a href="" target="_top">免费试用</a></li>
+              <li><a href="./aboutIndex.html" target="_top">为何选择派网</a></li>
+              <li><a href="#" data-toggle="modal" data-target="#myModal">免费试用</a></li>
               <li><a href="./productIsp.html" target="_top">产品</a></li>
               <li><a href="./solution.html" target="_top">解决方案</a></li>
               <li><a href="./aboutClient.html" target="_top">客户案例</a></li>
@@ -48,7 +48,7 @@
           <div class="widget">
             <h4 class="title">合作伙伴</h4>
             <ul>
-              <li><a href="" target="_top">申请加盟</a></li>
+              <li><a href="#" data-toggle="modal" data-target="#myModal-1">申请加盟</a></li>
               <li><a href="https://115.28.107.42:31443/login.php" target="_blank">PN管理</a></li>
               <li><a href="https://115.28.107.42:51443/Products/wangba/login.php" target="_blank">网吧版后台</a></li>
               <li><a href="https://partner.panabit.com/" target="_blank">合作伙伴登陆</a></li>
