首页banner和字体

--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- logo -->
     <div class="navbar-header header-top">
-      <a class="navbar-brand header-brand" href="#"><img src="img/logo1.png" alt=""></a>
+      <a class="navbar-brand header-brand" href="./index.html"><img src="img/logo1.png" alt=""></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div class="navbar-right">
