--- a/index.html
+++ b/index.html
@@ -97,27 +97,35 @@
   <!-- header -->
   <div class="content1 swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide" onclick="linkHtml('solution.html')">
-          <img src="img/panabit-banner1.jpg" alt="">
+        <div class="swiper-slide" style="background-color:#ff202b;background-image:url(img/panabit-banner3.jpg);" onclick="linkHtml('productIsp.html')">
+          <!-- <img src="img/panabit-banner1.jpg" alt=""> -->
           <div class="banner-title">
-            <h1>国内领先的网络应用层解决方案供应商</h1>
-            <p>基于广受好评的网络应用识别优化引擎以及业界领先的PANAOS操作系统</p>
+            <h1>Panabit智能应用路由</h1>
+            <p>网络进出口运维和运营的首选伴侣</p>
           </div>
           <div class="hack"></div>
         </div>
-        <div class="swiper-slide" onclick="linkHtml('ixcache.html')">
-          <img src="img/panabit-banner2.jpg" alt="">
+        <div class="swiper-slide" style="background-color:#cc24fc;background-image:url(img/panabit-banner2.jpg);" onclick="linkHtml('ixcache.html')">
+          <!-- <img src="img/panabit-banner2.jpg" alt=""> -->
           <div class="banner-title">
             <h1>iXCache内容缓存加速</h1>
             <p>给我一点空间，我会将你的网络变成小宇宙</p>
           </div>
           <div class="hack"></div>
         </div>
-        <div class="swiper-slide" onclick="linkHtml('panalog.html')">
-          <img src="img/panabit-banner3.jpg" alt="">
+        <div class="swiper-slide" style="background-color:#5fca00;background-image:url(img/panabit-banner1.jpg);" onclick="linkHtml('panalog.html')">
+          <!-- <img src="img/panabit-banner3.jpg" alt=""> -->
           <div class="banner-title">
             <h1>Panalog运营商日志留存</h1>
             <p>网络大数据基石，让网络开挂者无所遁形</p>
+          </div>
+          <div class="hack"></div>
+        </div>
+        <div class="swiper-slide" style="background-color:#41a2f8;background-image:url(img/panabit-banner4.jpg);" onclick="linkHtml('solution.html')">
+          <!-- <img src="img/panabit-banner1.jpg" alt=""> -->
+          <div class="banner-title">
+            <h1>国内领先的网络应用层解决方案供应商</h1>
+            <p>基于广受好评的网络应用识别优化引擎以及业界领先的PANAOS操作系统</p>
           </div>
           <div class="hack"></div>
         </div>
@@ -128,7 +136,7 @@
   <div class="main">
     <section class="outer-section product">
       <div class="product-navbar banner-button row">
-        <div class="col-md-4" onclick="linkHtml('solution.html')">
+        <div class="col-md-4" onclick="linkHtml('productIsp.html')">
           <p>智能应用网关</p>
           <p>Panabit</p>
         </div>
