产品页效果调整

--- a/productNetcafe.html
+++ b/productNetcafe.html
@@ -57,14 +57,18 @@
     </section>
     <section class="outer-section">
       <div class="content3">
-        <h1 class="product-other-title">极致享受 打造完美网吧网络</h1>
-        <p>Panabit网吧版是专门为网吧行业市场量身定制的一款高性能、高可用性、功能丰富的出口一体优化设备，以卓越的性能领跑网吧行业产品。最高可带800台终端。不仅完美满足网吧网络对速率和品质最高标准的要求，还能利用精准的流量控制、应用分流和应用负载均衡技术，为网吧打造优质低价的网络环境。</p>
+        <div class="container">
+          <h1 class="product-other-title">极致享受 打造完美网吧网络</h1>
+          <p style="text-align: left;">Panabit网吧版是专门为网吧行业市场量身定制的一款高性能、高可用性、功能丰富的出口一体优化设备，以卓越的性能领跑网吧行业产品。最高可带800台终端。不仅完美满足网吧网络对速率和品质最高标准的要求，还能利用精准的流量控制、应用分流和应用负载均衡技术，为网吧打造优质低价的网络环境。</p>
+        </div>
       </div>
     </section>
     <section class="outer-section">
       <div class="content4">
-        <h1 class="product-title">性能卓越的出口一体化网关</h1>
-        <p>Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
+        <div class="container">
+          <h1 class="product-title">性能卓越的出口一体化网关</h1>
+          <p style="text-align: left;">Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
+        </div>
       </div>
     </section>
     <section class="outer-section case">
