--- a/productAreas.html
+++ b/productAreas.html
@@ -55,14 +55,18 @@
     </section>
     <section class="outer-section">
       <div class="content3">
-        <h1 class="product-other-title">小区首选，宽带一体化运营</h1>
-        <p>Panabit小区版专门为小区宽带运营商量身定制的、以软件租赁模式为主的高性能、高可用性、功能丰富的网络出口一体优化解决方案。可适用于同时在线 80-8000人以下的小区宽带网络。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡、PPPoE、Radius 对接、共享检测、防封杀等丰富功能。</p>
+        <div class="container">
+          <h1 class="product-other-title">小区首选，宽带一体化运营</h1>
+          <p style="text-align: left;">Panabit小区版专门为小区宽带运营商量身定制的、以软件租赁模式为主的高性能、高可用性、功能丰富的网络出口一体优化解决方案。可适用于同时在线 80-8000人以下的小区宽带网络。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡、PPPoE、Radius 对接、共享检测、防封杀等丰富功能。</p>
+        </div>
       </div>
     </section>
     <section class="outer-section">
       <div class="content4">
-        <h1 class="product-title">性能卓越的出口一体化网关</h1>
-        <p>Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
+        <div class="container">
+          <h1 class="product-title">性能卓越的出口一体化网关</h1>
+          <p style="text-align: left;">Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
+        </div>
       </div>
     </section>
     <section class="outer-section case">
