--- a/productEnterprise.html
+++ b/productEnterprise.html
@@ -56,14 +56,18 @@
     </section>
     <section class="outer-section">
       <div class="content3">
-        <h1 class="product-other-title">企业必备，上网行为管理的神器</h1>
-        <p>Panabit企业版专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。特别适用于同时在线1500用户以内的普教、企业、政府、酒店、WIFI覆盖场馆等客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功。</p>
+        <div class="container">
+          <h1 class="product-other-title">企业必备，上网行为管理的神器</h1>
+          <p style="text-align: left">Panabit企业版专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。特别适用于同时在线1500用户以内的普教、企业、政府、酒店、WIFI覆盖场馆等客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功。</p>
+        </div>
       </div>
     </section>
     <section class="outer-section">
       <div class="content4">
-        <h1 class="product-title">性能卓越的出口一体化网关</h1>
-        <p>Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
+        <div class="container">
+          <h1 class="product-title">性能卓越的出口一体化网关</h1>
+          <p style="text-align: left">Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
+        </div>
       </div>
     </section>
     <section class="outer-section case">
