smb页面的价格

--- a/productSmb.html
+++ b/productSmb.html
@@ -42,22 +42,41 @@
     </section>
     <section class="outer-section">
       <div class="content-buy row">
-        <div class="col-md-6 buy-content">
-          <img src="img/number1.png" alt="">
+        <div class="col-md-6 buy-content" style="background-color: #a11f1f">
+          <img src="img/buy-content-number1.png" alt="">
         </div>
-        <div class="col-md-6 buy-content">
-          <img src="img/number2.png" alt="">
+        <div class="col-md-6 buy-content" style="background-color: #26398c">
+          <img src="img/buy-content-number2.png" alt="">
         </div>
         <div class="row bottom">
           <div class="row col-sm-6 buy-bottom">
-            <div class="col-md-6"><span class="glyphicon glyphicon-shopping-cart"></span>购买</div>
-            <div class="col-md-6"><span class="glyphicon glyphicon-book"></span>说明</div>
+            <div class="col-md-6">
+              <a href="http://panabit.com/smb/index.html" class="buy-content-button buy-content-buy" target="_blank">
+              </a>
+            </div>
+            <div class="col-md-6">
+              <a href="http://panabit.com/uploads/doc/SMB-M100.pdf" class="buy-content-button buy-content-info" target="_blank">
+              </a></div>
           </div>
           <div class="row col-sm-6 buy-bottom">
-            <div class="col-md-6"><span class="glyphicon glyphicon-shopping-cart"></span>购买</div>
-            <div class="col-md-6"><span class="glyphicon glyphicon-book"></span>说明</div>
+            <div class="col-md-6">
+              <a href="http://panabit.com/smb/index.html" class="buy-content-button buy-content-buy" target="_blank">
+              </a>
+            </div>
+            <div class="col-md-6">
+              <a href="http://panabit.com/uploads/doc/SMB-M200.pdf" class="buy-content-button buy-content-info" target="_blank">
+              </a></div>
           </div>
         </div>
+        <div class="content-buy-info">
+          <p>支持网关模式、网桥模式、混合模式，6千兆电口</p>
+          <p>三月包换 一年保修 永久使用</p>
+        </div>
+        <ul class="content-buy-six">
+          <li class="col-md-4"><div>千兆线速<br>硬件<div></li>
+          <li class="col-md-4"><div>双OS引擎<br>处理<div></li>
+          <li class="col-md-4"><div>发烧级<br>专业流控<div></li>
+        </ul>
       </div>
     </section>
     <section class="content5">
