--- a/index.html
+++ b/index.html
@@ -151,35 +151,7 @@
       </div>
     </section>
     <section class="outer-section case">
-      <div class="container">
-        <div class="row case-nav">
-          <div class="content-title col-sm-4">解决方案</div>
-          <ul class="row col-sm-4 col-sm-offset-4">
-            <li class="col-md-3"><a href="">运营商</a></li>
-            <li class="col-md-3"><a href="">企业</a></li>
-            <li class="col-md-3"><a href="">小区</a></li>
-            <li class="col-md-3"><a href="">高校</a></li>
-          </ul>
-        </div>
-        <div class="row case-content">
-          <div class="col-md-3">
-            <img src="img/case1.jpg" alt="">
-            <p>中国移动网络游戏加速</p>
-          </div>
-          <div class="col-md-3">
-            <img src="img/case2.jpg" alt="">
-            <p>智能DNS管控在实际中应用</p>
-          </div>
-          <div class="col-md-3">
-            <img src="img/case3.jpg" alt="">
-            <p>网络大数据系统分析方案</p>
-          </div>
-          <div class="col-md-3">
-            <img src="img/case4.jpg" alt="">
-            <p>智能应用网关网络出口解决方案</p>
-          </div>
-        </div>
-      </div>
+      <div id="case"></div>
     </section>
     <section class="outer-section news">
       <div class="container">
