--- a/productEnterprise.html
+++ b/productEnterprise.html
@@ -70,26 +70,7 @@
         </div>
       </div>
     </section>
-    <section class="outer-section case">
-      <h1 class="content-title">解决方案</h1>
-      <div class="row case-content">
-        <div class="col-md-3">
-          <img src="img/case1.jpg" alt="">
-          <p>中国移动网络游戏加速</p>
-        </div>
-        <div class="col-md-3">
-          <img src="img/case2.jpg" alt="">
-          <p>智能DNS管控在实际中应用</p>
-        </div>
-        <div class="col-md-3">
-          <img src="img/case3.jpg" alt="">
-          <p>网络大数据系统分析方案</p>
-        </div>
-        <div class="col-md-3">
-          <img src="img/case4.jpg" alt="">
-          <p>智能应用网关网络出口解决方案</p>
-        </div>
-      </div>
+    <section id="case-content">
     </section>
     <section class="outer-section">
       <div class="client">
