--- a/solution.html
+++ b/solution.html
@@ -125,6 +125,33 @@
               <td>冗余电源</td>
               <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-8000.pdf')"><img src="img/file.png" alt=""></td>
             </tr>
+            <tr>
+              <td>PB-12000</td>
+              <td>12Gbps</td>
+              <td>100000</td>
+              <td>3千兆电口</td>
+              <td>2千兆光口<br>2万兆光口</td>
+              <td>冗余电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-12000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-15000</td>
+              <td>4Gbps</td>
+              <td>30000</td>
+              <td>6千兆电口</td>
+              <td>2千兆光口<br>2万兆光口</td>
+              <td>冗余电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-15000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-20000</td>
+              <td>4Gbps</td>
+              <td>30000</td>
+              <td>6千兆电口</td>
+              <td>2千兆光口<br>2万兆光口</td>
+              <td>冗余电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-20000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
           </tbody>
         </table>
     </section>
