--- a/footer.html
+++ b/footer.html
@@ -1,104 +1,88 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>aboutClient</title>
-  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/main.css">
-  <!-- <link rel="stylesheet" href="css/swiper-3.4.2.min.css"> -->
-</head>
-<body>
-  <section class="bottom-promote">
-    <a href="#" data-toggle="modal" data-target="#myModal">
-      <div>
-        <h1>免费体验派网产品</h1>
-        <button>现在注册</button>
-      </div>
-    </a>
-  </section>
-  <footer class="main-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">探索Panabit</h4>
-            <ul>
-              <li><a href="./aboutIndex.html" target="_top">为何选择派网</a></li>
-              <li><a href="#" data-toggle="modal" data-target="#myModal">免费试用</a></li>
-              <li><a href="./productIsp.html" target="_top">产品</a></li>
-              <li><a href="./solution.html" target="_top">解决方案</a></li>
-              <li><a href="./aboutClient.html" target="_top">客户案例</a></li>
-              <li><a href="./aboutNews.html" target="_top">新闻</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">服务与支持</h4>
-            <ul>
-              <li><a href="" target="_top">软件下载</a></li>
-              <li><a href="" target="_top">渠道合作</a></li>
-              <li><a href="" target="_top">论坛</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">合作伙伴</h4>
-            <ul>
-              <li><a href="#" data-toggle="modal" data-target="#myModal-1">申请加盟</a></li>
-              <li><a href="https://115.28.107.42:31443/login.php" target="_blank">PN管理</a></li>
-              <li><a href="https://115.28.107.42:51443/Products/wangba/login.php" target="_blank">网吧版后台</a></li>
-              <li><a href="https://partner.panabit.com/" target="_blank">合作伙伴登陆</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <h4 class="title">关于我们</h4>
-            <ul>
-              <li><a href="./aboutIndex.html" target="_top">公司简介</a></li>
-              <li><a href="./aboutContact.html" target="_top">联系我们</a></li>
-              <li><a href="./aboutJob.html" target="_top">招贤纳才</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-2">
-          <div class="widget">
-            <div class="title"><img src="img/footer-logo.png" alt=""></div>
-            <h4 class="title">关注我们</h4>
-            <div class="attention">
-              <span></span>
-              <span onclick="linkHtml('http://www.weibo.com/panabit', true)"></span>
-              <span></span>
-              <span></span>
-            </div>
-          </div>
-        </div>
-      </div>
+<section class="bottom-promote">
+  <a href="#" data-toggle="modal" data-target="#myModal">
+    <div>
+      <h1>免费体验派网产品</h1>
+      <button>现在注册</button>
     </div>
-  </footer>
-  <div class="copyright">
-    <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <span> © Copyright 2017 Panabit, inc. All rights reserved. 京ICP备14008283号  北京市海淀区丰慧中路7号新材料创业大厦B622-623    邮箱：webmaster@panabit.com </span>
+  </a>
+</section>
+<footer class="main-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-2">
+        <div class="widget">
+          <h4 class="title">探索Panabit</h4>
+          <ul>
+            <li><a href="./aboutIndex.html" target="_top">为何选择派网</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#myModal">免费试用</a></li>
+            <li><a href="./productIsp.html" target="_top">产品</a></li>
+            <li><a href="./solution.html" target="_top">解决方案</a></li>
+            <li><a href="./aboutClient.html" target="_top">客户案例</a></li>
+            <li><a href="./aboutNews.html" target="_top">新闻</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-2">
+        <div class="widget">
+          <h4 class="title">服务与支持</h4>
+          <ul>
+            <li><a href="" target="_top">软件下载</a></li>
+            <li><a href="" target="_top">渠道合作</a></li>
+            <li><a href="" target="_top">论坛</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-2">
+        <div class="widget">
+          <h4 class="title">合作伙伴</h4>
+          <ul>
+            <li><a href="#" data-toggle="modal" data-target="#myModal-1">申请加盟</a></li>
+            <li><a href="https://115.28.107.42:31443/login.php" target="_blank">PN管理</a></li>
+            <li><a href="https://115.28.107.42:51443/Products/wangba/login.php" target="_blank">网吧版后台</a></li>
+            <li><a href="https://partner.panabit.com/" target="_blank">合作伙伴登陆</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-2">
+        <div class="widget">
+          <h4 class="title">关于我们</h4>
+          <ul>
+            <li><a href="./aboutIndex.html" target="_top">公司简介</a></li>
+            <li><a href="./aboutContact.html" target="_top">联系我们</a></li>
+            <li><a href="./aboutJob.html" target="_top">招贤纳才</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-2"></div>
+      <div class="col-sm-2">
+        <div class="widget">
+          <div class="title"><img src="img/footer-logo.png" alt=""></div>
+          <h4 class="title">关注我们</h4>
+          <div class="attention">
+            <span id="wechat"></span>
+            <span id="weibo" onclick="linkHtml('http://www.weibo.com/panabit', true)"></span>
+            <span id="qq"></span>
+            <span id="email"></span>
           </div>
         </div>
+      </div>
     </div>
   </div>
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script>
-    function linkHtml (link, top) {
-      if (top) {
-        window.open(link)
-      } else {
-        window.location.href=link
-      }
-    }
-  </script>
-</body>
-</html>
+</footer>
+<div class="copyright">
+  <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <span> © Copyright 2017 Panabit, inc. All rights reserved. 京ICP备14008283号  北京市海淀区丰慧中路7号新材料创业大厦B622-623    邮箱：webmaster@panabit.com </span>
+        </div>
+      </div>
+  </div>
+</div>
+<script>
+  $('#wechat').popover({
+    content: '<img src="./img/wechat.png"/>',
+    html: true,
+    trigger: 'hover',
+    placement: 'left'
+  })
+</script>
